<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHour"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/now"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageHourlyState"
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_sun_small_icon"
        android:contentDescription="@string/actual_state_of_weather" />
    <TextView
        android:id="@+id/tvHourlyTemp"
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/_15"
        android:textColor="#000000" />

</androidx.appcompat.widget.LinearLayoutCompat>