<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/main_image_for_temp"
        android:src="@drawable/ic_main_loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerForecast"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageMain"
        tools:itemCount="5"
        tools:listitem="@layout/forecast_item" />

    <TextView
        android:id="@+id/tvCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/gps_loading"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageMain"
        app:layout_constraintStart_toStartOf="@+id/imageMain"
        app:layout_constraintTop_toTopOf="@+id/imageMain" />

    <ImageView
        android:id="@+id/imageGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvCityName"
        app:layout_constraintEnd_toStartOf="@+id/tvCityName"
        app:layout_constraintStart_toStartOf="@+id/imageMain"
        app:layout_constraintTop_toTopOf="@+id/tvCityName"
        app:srcCompat="@drawable/ic_gps_small_icon"
        android:contentDescription="@string/image_for_pgs_indicator" />

    <TextView
        android:id="@+id/tvMainTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/loading_temp"
        android:textColor="@color/grayCustom"
        android:textSize="54sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageMain"
        app:layout_constraintEnd_toEndOf="@+id/imageMain"
        app:layout_constraintStart_toStartOf="@+id/imageMain"
        app:layout_constraintTop_toBottomOf="@+id/tvCityName" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/grayCustom"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageMain"
        app:layout_constraintStart_toStartOf="@+id/imageMain"
        app:layout_constraintTop_toBottomOf="@+id/tvMainTemp" />

    <TextView
        android:id="@+id/tvFeelsLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/feels_like"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageMain"
        app:layout_constraintEnd_toEndOf="@+id/imageMain"
        app:layout_constraintStart_toStartOf="@+id/imageMain"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <TextView
        android:id="@+id/tvWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/wind_speed"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageMain"
        app:layout_constraintEnd_toEndOf="@+id/imageMain"
        app:layout_constraintStart_toStartOf="@+id/imageMain"
        app:layout_constraintTop_toBottomOf="@+id/tvFeelsLike" />

    <ProgressBar
        android:id="@+id/progressCircle"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/recyclerForecast"
        app:layout_constraintStart_toStartOf="@+id/recyclerForecast"
        app:layout_constraintTop_toTopOf="@+id/recyclerForecast" />
</androidx.constraintlayout.widget.ConstraintLayout>