<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

        <ImageView
            android:id="@+id/dailyForecastImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_forecast_loading"
            android:contentDescription="@string/mainImageDesc" />

        <ImageView
            android:id="@+id/dailyStateImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/dailyForecastImage"
            app:layout_constraintEnd_toStartOf="@+id/dailyTempEvening"
            app:layout_constraintStart_toEndOf="@+id/dailyTempDay"
            app:layout_constraintTop_toTopOf="@+id/dailyForecastImage"
            app:srcCompat="@drawable/ic_sun_small_icon"
            android:contentDescription="@string/stateImageDesc" />

        <TextView
            android:id="@+id/tvDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/Friday"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/dailyForecastImage"
            app:layout_constraintStart_toStartOf="@+id/dailyForecastImage"
            app:layout_constraintTop_toTopOf="@+id/dailyForecastImage" />

        <TextView
            android:id="@+id/dailyTempEvening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/_15"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/dailyForecastImage"
            app:layout_constraintEnd_toEndOf="@+id/dailyForecastImage"
            app:layout_constraintTop_toTopOf="@+id/dailyForecastImage" />

        <TextView
            android:id="@+id/dailyTempDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/_15"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/dailyForecastImage"
            app:layout_constraintEnd_toEndOf="@+id/dailyForecastImage"
            app:layout_constraintStart_toStartOf="@+id/dailyForecastImage"
            app:layout_constraintTop_toTopOf="@+id/dailyForecastImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>